# warrantylens

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run.sh  stop.sh
backend/: .dockerignore  .env.example  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_claims_evidence.py  0003_ai_outputs.py  0004_scoring_review.py  0005_serial_lifecycle.py  0006_battery_report.py  0007_vehicle_telemetry.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  (+7 more)
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  security.py  tenancy.py
backend/app/db/: base.py  session.py
backend/app/db/models/: __init__.py  ai.py  audit_log.py  battery.py  claim.py  component.py  enums.py  inspection_template.py  media.py  mixins.py  parts.py  processing_job.py  refresh_token.py  scoring.py  tenant.py  user.py  vehicle.py
backend/app/ml/: telemetry_sim.py
backend/app/ml/clients/: asr.py  base.py  detection.py  embeddings.py  ocr.py  vlm.py
backend/app/ml/postprocess/: vin.py
backend/app/ml/prompts/: inspection.py
backend/app/schemas/: ai.py  auth.py  battery.py  catalog.py  claim.py  common.py  media.py  parts.py  review.py  scoring.py  user.py
backend/app/scripts/: seed.py  smoke_full.py  smoke_test.py  verify_pipeline.py  verify_yolo.py
backend/app/services/: audit_service.py  auth_service.py  battery_service.py  catalog_service.py  claim_service.py  completeness_service.py  dashboard_service.py  evidence_service.py  report_service.py  review_service.py  risk_service.py  serial_service.py  storage_service.py  telemetry_service.py  user_service.py  verdict_service.py
backend/app/workers/: ai_stages.py  celery_app.py  media_processing.py  orchestrator.py  runtime.py
backend/tests/: conftest.py  test_auth.py  test_claims.py  test_scoring.py  test_security.py  test_users_rbac.py  test_vin.py
(+45 files in other folders)
