[project]
name = "warrantylens-backend"
version = "0.1.0"
description = "WarrantyLens - AI EV Warranty Inspection Assistant (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "pydantic[email]>=2.7",
    "pydantic-settings>=2.3",
    "passlib[argon2]>=1.7.4",
    "pyjwt>=2.8",
    "python-multipart>=0.0.9",
    "structlog>=24.1",
    "redis>=5.0",
    "celery>=5.4",
    "boto3>=1.34",
    "pillow>=10.3",
    "numpy>=1.26",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "gunicorn>=22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.5",
]
# Heavy AI runtime deps. Install on the GPU/worker image when enabling real models:
#   pip install -e ".[ai]"
ai = [
    "ultralytics>=8.2",        # YOLOv11
    "faster-whisper>=1.0",     # Whisper ASR
    "pytesseract>=0.3.10",     # OCR (needs system `tesseract-ocr`)
    "FlagEmbedding>=1.2",      # BGE-M3
    "qdrant-client>=1.9",
]
# PDF rendering. WeasyPrint needs system libs (libpango, libcairo) — installed in
# Dockerfile.worker. The report service degrades to HTML-only if unavailable.
pdf = ["weasyprint>=62"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["B008", "UP042"]  # B008: FastAPI Depends() defaults; UP042: str+Enum is intentional

[tool.ruff.lint.per-file-ignores]
"app/ml/prompts/*" = ["E501"]          # prompt templates contain long literal lines
"app/services/report_service.py" = ["E501"]  # inline HTML/CSS template lines
"app/scripts/smoke_test.py" = ["E501"]       # readable f-string status lines

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
